--- a/Exercises/CSS/1 - Online Newspaper Design/style.css
+++ b/Exercises/CSS/1 - Online Newspaper Design/style.css
@@ -19,6 +19,10 @@ img {
     width: 100%;
 }
 
+nav#menu input#hamburger {
+    display: none;
+}
+
 /* Header */
 
 header {
@@ -68,15 +72,11 @@ nav#menu {
     background-color: white;
 }
 
-nav#menu input#hamburger {
-    display: none;
-}
-
 nav#menu li {
     margin: 1rem;
 }
 
-nav#menu a {
+nav#menu li a {
     color: #2A2F33;
     font-weight: bold;
 }
@@ -87,6 +87,7 @@ nav#menu ul {
     width: 100%;
     margin: 0;
     padding: 0;
+    background-color: white;
 }
 
 nav#menu li {
