--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,9 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Varela Round', sans-serif;
     background-color:whitesmoke;
     margin: 0;
+    --boxColor: rgb(24, 24, 24);
 }
 
 a {
@@ -26,7 +27,7 @@ nav#menu {
     height: 100%;
     position: fixed;
     right: 0;
-    background-color: #111;
+    background-color: var(--boxColor);
     z-index: 1;
 }
 
@@ -35,18 +36,23 @@ nav#menu a {
 }
 
 section#adoption {
+    margin: 1em;
+}
+
+section#pets {
     display: flex;
     flex-wrap: wrap;
 }
 
 div.pet-card {
+    justify-self: flex-start;
+    border-radius: 0.5em;
     flex-shrink: 0;
     position: relative;
     width: 17em;
-    height: 18em;
-    background-color: white;
-    margin-left: 0.8em;
-    margin-top: 0.8em;
+    margin-right: 0.8em;
+    margin-bottom: 0.8em;
+    box-shadow: 3px 3px 3px lightgray;
 }
 
 div.favorite-icon {
@@ -54,20 +60,27 @@ div.favorite-icon {
     top: 0.5em;
     left: 0.5em;
     font-size: 1.3em;
-}
-
-div.favorite-icon i.fa-square {
-    text-shadow: 3px 3px  white;
+    color: rgb(24, 24, 24);
 }
 
 div.pet-card img {
+    display: block;
     width: 100%;
-    height: 85%;
+    height: 18em;
     object-fit: cover;
+    border-radius: 0.5em 0.5em 0 0;
+}
+
+div.container {
+    border-radius: 0 0 0.5em 0.5em;
+    background-color: var(--boxColor);
+    padding: 0.5em;
 }
 
 div.container p {
     margin: 0;
+    background-color: var(--boxColor);
     text-align: center;
+    font-size: large;
+    color: white;
 }
-
