Showing the username when logged in

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -26,7 +26,7 @@ header #account {
     margin-right: 1em;
 }
 
-header #account a {
+header #account > a {
     margin-left: 1em;
 }
 
@@ -41,5 +41,3 @@ nav#menu {
 nav#menu a {
     color: white;
 }
-
-
