--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,20 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
 
+:root {
+    --color1: #181818;
+    --color2: #BEBEBE;
+}
+
 body {
     font-family: 'Varela Round', sans-serif;
     background-color:whitesmoke;
     margin: 0;
-    --boxColor: rgb(24, 24, 24);
 }
 
 a {
     text-decoration: none;
+    color: white;
 }
 
 header {
-    background-color:white;
+    background-color: var(--color1);
     display: flex;
     align-items: center;
+    padding: 1em;
 }
 
 header h1 {
@@ -28,13 +34,14 @@ header #account {
 
 header #account > a {
     margin-left: 1em;
+    border-left: 1px solid var(--color2);
 }
 
 nav#menu {
     height: 100%;
     position: fixed;
     right: 0;
-    background-color: var(--boxColor);
+    background-color: var(--color1);
     z-index: 1;
 }
 
