--- a/src/style/style.css
+++ b/src/style/style.css
@@ -16,35 +16,44 @@ a {
     color: white;
 }
 
+/* Header */
+
 header {
     background-color: var(--color1);
     display: flex;
     align-items: center;
-    padding: 1em;
+    padding-left: 1.5em;
+    padding-right: 1.5em;
 }
 
 header h1 {
     margin: 0;
+    font-size: 1.6em;
 }
 
-header #account {
+header #authentication {
     margin-left: auto;
     margin-right: 1em;
 }
 
-header #account > a {
-    margin-left: 1em;
+header #authentication > a {
+    padding-left: 0.7em;
+    padding-right: 0.7em;
+}
+
+header #authentication > a + a {
     border-left: 1px solid var(--color2);
 }
 
-nav#menu {
-    height: 100%;
-    position: fixed;
-    right: 0;
-    background-color: var(--color1);
-    z-index: 1;
+header #authentication p {
+    display: inline-block;
+    color: var(--color2);
 }
 
-nav#menu a {
-    color: white;
+header #authentication #avatar {
+    height: 3em;
+    vertical-align: middle;
+    border-radius: 50%;
+    padding: 0.5em;
+    padding-right: 0;
 }
