--- a/src/style/adoption_list.css
+++ b/src/style/adoption_list.css
@@ -7,69 +7,23 @@ section#pets {
     flex-wrap: wrap;
 }
 
-div.pet-card {
-    justify-self: flex-start;
-    border-radius: 0.5em;
-    flex-shrink: 0;
-    position: relative;
-    width: 17em;
-    margin-right: 0.8em;
-    margin-bottom: 0.8em;
-    box-shadow: 3px 3px 3px lightgray;
+section#pets > * {
+    margin-bottom: 1em;
+    margin-right: 1em;
 }
 
-div.favorite-icon, div.post-icon {
-    position: absolute;
-    font-size: 1.3em;
-    color: rgb(24, 24, 24);
-}
-
-div.post-icon {
-    top: 0.5em;
-    left: 0.5em;
-}
-
-div.favorite-icon {
-    top: 0.5em;
-    right: 0.5em;
-}
-
-div.pet-card img {
-    display: block;
-    width: 100%;
-    height: 18em;
-    object-fit: cover;
-    border-radius: 0.5em 0.5em 0 0;
-}
-
-div.container {
+footer.container {
     border-radius: 0 0 0.5em 0.5em;
-    background-color: var(--boxColor);
+    background-color: var(--color1);
     padding: 0.5em;
 }
 
-div.container p {
+footer.container p {
     margin: 0;
-    background-color: var(--boxColor);
+    background-color: var(--color1);
     text-align: center;
     font-size: large;
     color: white;
-}
-
-div.container footer {
-    margin-top: 0.5em;
-    margin-bottom: 0.5em;
-    display: flex;
-    justify-content: space-around;
-}
-
-div.container footer * {
-    width: 100%;
-    text-align: center;
-}
-
-div.container footer p {
-   font-size: 0.95em;
 }
 
 section#searchBar {
