--- a/src/style/forms.css
+++ b/src/style/forms.css
@@ -1,7 +1,3 @@
-form * {
-    display: block;
-}
-
 label {
     font-size: 1.1em;
 }
@@ -59,11 +55,15 @@ section#register form input[type=submit] {
 
 /* Submition Form */    
 
-h2 {
+form#pet-submition form * {
+    display: block;
+}
+
+form#pet-submition h2 {
     text-align: center;
 }
 
-input, select {
+form#pet-submition input, form#pet-submition select {
     background-color: white;
     border: 0;
     border-radius: 3px 3px 3px 3px;
@@ -71,8 +71,6 @@ input, select {
     padding-bottom: 0.5em;
     width: 100%;
 }
-
-
 
 form#pet-submition {
     padding-left: 5em;  
@@ -89,7 +87,7 @@ form#pet-submition label > * {
     margin-bottom: 0.4em;
 }
 
-textarea {
+form#pet-submition textarea {
     border: 0;
     border-radius: 3px 3px 3px 3px;
     width: 100%;
@@ -147,7 +145,7 @@ div#extra-fields * {
     margin: 0.5em;
 }
 
-button[type=submit]{
+form#pet-submition button[type=submit]{
     background-color: var(--color1);
     color: white;
     border: 0;
