--- a/src/style/adoption_list.css
+++ b/src/style/adoption_list.css
@@ -26,7 +26,7 @@ footer.container p {
     color: white;
 }
 
-section#searchBar {
+section#search-bar {
     display: flex;
     align-items: stretch;
     text-align: center;
