--- a/src/style/cards.css
+++ b/src/style/cards.css
@@ -4,7 +4,7 @@ div.card {
     flex-shrink: 0;
     position: relative;
     width: 17em;
-    box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.3);
+    box-shadow: 0em 0.1em 0.2em grey;
     background-color: var(--color1);
     height: 100%;
 }
