--- a/src/style/adoption_list.css
+++ b/src/style/adoption_list.css
@@ -10,6 +10,7 @@ section#pets {
 section#pets > * {
     margin-bottom: 1em;
     margin-right: 1em;
+    width: 17em;
 }
 
 footer.container {
@@ -26,32 +27,34 @@ footer.container p {
     color: white;
 }
 
-section#search-bar {
+div#search-bar {
     display: flex;
     align-items: stretch;
     text-align: center;
-}
-
-section#bar{
     background-color: white;
     width: fit-content;
     padding: 0.5em;
     border-radius: 0.6em;
     border-width: 0;
-    box-shadow: 0em 0.1em 0.2em grey;
+    box-shadow: 0em 0.1em 0.2em grey;   
 }
 
-section#bar input#name{
+div#search-bar input#name{
     border: none;
     border-right: 0.01em solid black;
 }
 
-section#bar input#name:active {
-    border:none;
+div#search-bar input#name:active {
+    border: none;
 }
 
-section#bar select#species{ 
+div#search-bar select#species{ 
     border: none;
+}
+
+div#search-bar input[type="submit"] {
+    border: none;
+    background-color: white;
 }
 
 img.resize {
@@ -59,7 +62,3 @@ img.resize {
     height: auto;
 }
 
-section#bar input[type="submit"] {
-    border: none;
-    background-color: white;
-}
