--- a/src/style/adoption_list.css
+++ b/src/style/adoption_list.css
@@ -1,3 +1,7 @@
+h2 {
+    text-align: center;
+}
+
 section#adoption {
     margin: 1em;
 }
@@ -5,6 +9,8 @@ section#adoption {
 section#pets {
     display: flex;
     flex-wrap: wrap;
+    margin-left: 5em;
+    margin-right: 5em;
 }
 
 section#pets > * {
@@ -35,8 +41,9 @@ div#search-bar {
     width: fit-content;
     padding: 0.5em;
     border-radius: 0.6em;
-    border-width: 0;
     box-shadow: 0em 0.1em 0.2em grey;   
+    margin: auto;
+    margin-bottom: 1.5em;
 }
 
 div#search-bar input#name{
