--- a/src/style/forms.css
+++ b/src/style/forms.css
@@ -94,18 +94,33 @@ form#pet-submition textarea {
     resize: none;
 }
 
-div#pet-gender button {
+div#pet-gender label  {
+    text-align: center;
+    display: inline-block;
+    height: 5em;
+    width: 5em;
+    margin: 0.5em;
     background-color: white;
     border: 0;
     border-radius: 3px 3px 3px 3px;
     box-shadow: 0em 0.1em 0.2em grey;
 }
 
-button#male {
+div#pet-gender input{
+    opacity: 0;
+    position: fixed;
+    width: 0;
+}
+
+div#pet-gender input:checked + label{
+    background-color: lightblue;
+}
+
+label[for="male"]{
     color: #00B2FF;
 }
 
-button#female {
+label[for="female"] {
     color: #E58BD2;
 }
 
@@ -131,11 +146,6 @@ div#extra-fields {
     padding-left: 1em;
 }
 
-#pet-gender button {
-    height: 7em;
-    width: 7em;
-    margin: 0.5em;
-}
 
 form#pet-submition button[type=submit] {
    font-size: 1.7em;
