--- a/src/style/forms.css
+++ b/src/style/forms.css
@@ -21,6 +21,11 @@ form button[type=submit] {
     border-radius: 7px 7px 7px 7px;
 }
 
+/* input[type=file] {
+   display: none;
+} */
+
+
 /* Authentication Forms */
 
 section.authentication-form {
@@ -109,7 +114,6 @@ div#pet-gender label  {
 div#pet-gender input{
     opacity: 0;
     position: fixed;
-    width: 0;
 }
 
 div#pet-gender input:checked + label{
