--- a/src/style/forms.css
+++ b/src/style/forms.css
@@ -182,6 +182,13 @@ div.photo-card {
     margin-right: 1em;
 }
 
+#photo-preview {
+    width: 100%;
+    grid-area: Card;
+    margin: auto;
+    margin-right: 100em;
+}
+
 #fields {
     grid-area: Fields;
 }
