fixed bugs, displays more info about pets from database according to last merge

--- a/src/style/pet_profile.css
+++ b/src/style/pet_profile.css
@@ -63,6 +63,7 @@ div#pet_profile div#pet_info {
     margin-left: auto;
     margin-right: auto;
     width:60%;
+    word-wrap: break-word;
     text-align: center;
     border: solid 1px black;
 }
