--- a/src/style/user_profile.css
+++ b/src/style/user_profile.css
@@ -64,3 +64,10 @@ img#profile_pic {
     padding: 0.5em;
     padding-right: 0;
 }
+
+section#favourites {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(8em, 1fr));
+    grid-gap: 1em;
+}
+
