Updated database with new attributes for pets and new posts

--- a/src/style/user_post.css
+++ b/src/style/user_post.css
@@ -5,6 +5,7 @@ div#adoption-post-card {
     background-color: white;
     padding: 1em;
     padding-bottom: 0.1em;
+    margin-bottom: 0.6em;
 }
 
 div#adoption-post-card h2 {
