--- a/src/style/style.css
+++ b/src/style/style.css
@@ -62,6 +62,28 @@ img#avatar {
     padding-right: 0;
 }
 
+div#avatar_dropdown {
+    display: none;
+    position: absolute;
+    width: fit-content;
+    right: 1em;
+    background-color: white;
+    text-align: justify;
+}
+
+div#avatar_dropdown ul {
+    list-style-type: none;
+    padding-left: 0;
+}
+
+div#avatar_dropdown li {
+   margin: 1em;
+}
+
+div#avatar_dropdown a {
+    color: black;
+}
+
 /* Footer */
 
 body > footer {
