--- a/src/style/pet_profile.css
+++ b/src/style/pet_profile.css
@@ -24,6 +24,11 @@ div#pet_profile button#favorite{
 div#pet_profile div#grid{
     display:grid;
     grid-template-columns: 70% 30%;
+    padding:2em;
+    border-bottom: 0.5px solid black;
+    max-width: 90%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 div#pet_profile h2{
@@ -87,6 +92,51 @@ div#pet_profile div#pet_info p#info_bullets *+ :before{
     content : "\2022";
 }
 
+div#pet_profile_comments form label textarea{
+    display:block;
+    width:100%;
+    margin-top:0.5em;
+    margin-bottom:0.5em;
+    resize: none;
+}
 
 
+div#pet_profile_comments form{
+    margin-top:1em;
+    margin-left:2em;
+    max-width: 90%;
+}
+
+div#pet_profile_comments form input[type=submit] {
+    background-color: var(--color1);
+    color: white;
+    border: none;
+    margin-left: 45%;
+    margin-right: 45%;
+    padding: 0.3em;
+    padding-left: 2.7em;
+    padding-right: 2.7em;
+    border-radius: 7px 7px 7px 7px;
+}
+
+div#pet_profile_comments div#comments{
+    margin-top:1em;
+}
+
+div#pet_profile_comments div#comments div#comment{
+    margin-bottom: 1em;
+    background-color: white;
+    margin-left: 2em;
+    max-width: 90%;
+    border:0.5px solid black;
+    border-radius: 0.5rem;
+}
+
+div#pet_profile_comments div#comments div#comment :nth-child(1){
+    font-weight: bold;
+}
+
+div#pet_profile_comments div#comments div#comment p{
+    margin-left: 1em;
+}
 
