--- a/src/style/forms.css
+++ b/src/style/forms.css
@@ -10,7 +10,7 @@ form input {
     font-family: 'Varela Round', sans-serif;
 }
 
-form button[type=submit] {
+form input[type=submit] {
     background-color: var(--color1);
     color: white;
     border: 0;
@@ -25,7 +25,6 @@ input[type=file] {
    opacity: 0;
    height: 1px;
 }
-
 
 /* Authentication Forms */
 
@@ -59,8 +58,9 @@ section.authentication-form form label input {
     margin-bottom: 2rem;
 }
 
-section.authentication-form form button[type=submit] {
-    font-size: 1.4em;
+section.authentication-form form input[type=submit] {
+    font-size: 1.3em;
+    display: block;
 }
 
 /* Adoption Post Submission Form */    
@@ -152,7 +152,7 @@ div#extra-fields {
 }
 
 
-form#pet-submition button[type=submit] {
+form#pet-submition input[type=submit] {
    font-size: 1.7em;
    display: block;
    margin: auto;
