--- a/src/style/forms.css
+++ b/src/style/forms.css
@@ -69,7 +69,7 @@ form#pet-submition h2 {
     text-align: center;
 }
 
-form#pet-submition input, form#pet-submition select {
+form#pet-submition input:not([type=submit]), form#pet-submition select {
     background-color: white;
     border: 0;
     border-radius: 3px 3px 3px 3px;
@@ -100,7 +100,7 @@ form#pet-submition textarea {
     resize: none;
 }
 
-div#pet-gender label  {
+div#pet-gender label {
     text-align: center;
     display: inline-block;
     height: 5em;
