Change username working

--- a/src/style/user_settings.css
+++ b/src/style/user_settings.css
@@ -13,3 +13,7 @@ span#password_error {
 input#submit_password:disabled {
     background-color: gray;
 }
+
+span#username_error {
+    color: red;
+}
