--- a/src/style/user_settings.css
+++ b/src/style/user_settings.css
@@ -6,6 +6,11 @@ section#user_settings {
     width: 70%;
 }
 
+section#user_settings label {
+    display: block;
+    font-weight: bold;
+}
+
 span#password_error {
     color: red;
 }
@@ -20,4 +25,74 @@ span#username_error {
 
 span#info_error {
     color: red;
+}
+
+form#profile_change {
+    display: grid;
+    grid-template-columns: 30% 70%;
+    grid-template-areas: 
+        "Pic Name_Bio"
+        "Button Button";
+    margin-bottom: 1.5em;
+}
+
+div#profile_pic {
+    width: 100%;
+    grid-area: Pic;
+}
+
+div#profile_info {
+    grid-area: Name_Bio;
+    margin-bottom: 1em;
+}
+
+div#profile_info input[name="newName"] {
+    width: max-content;
+    margin-bottom: 1em;
+    border-radius: 0.2rem;
+    padding: 0.5em;
+    border: none;
+    background-color: #EFEFEF;
+}
+
+div#profile_info textarea[name="newBio"] {
+    width: 80%;
+    display: block;
+    resize: none;
+    border-radius: 0.2rem;
+    padding: 0.5em;
+    border: none;
+    background-color: #EFEFEF;
+}
+
+form#profile_change input[type="submit"] {
+    grid-area: Button;
+}
+
+form#username_change {
+    margin-top: 3em;
+    text-align: center;
+    margin-bottom: 3em;
+}
+
+form#username_change input[type="submit"] {
+    width: fit-content;
+    padding-left: 1em;
+    padding-right: 1em;
+}
+
+form#password_change {
+    text-align: center;
+    padding-bottom: 5em;
+}
+
+form#password_change label {
+    font-weight: normal;
+    font-size: 1em;
+}
+
+form#password_change input[type="submit"] {
+    display: block;
+    width: fit-content;
+    margin-top: 1.5em;
 }
