--- a/src/style/cards.css
+++ b/src/style/cards.css
@@ -26,6 +26,7 @@ span.favorite-icon, div.post-icon {
     position: absolute;
     font-size: 1.3em;
     color: var(--color1);
+    user-select: none;
 }
 
 div.post-icon {
