--- a/src/style/user_settings.css
+++ b/src/style/user_settings.css
@@ -6,6 +6,16 @@ section#user_settings {
     width: 70%;
 }
 
+div.photo-card {
+    grid-area: Photo;
+    width: 20%;
+    height: 100%;
+    margin-right: 1em;
+    margin: auto;
+    margin-top: 0em;
+    padding-top: 1em;
+}
+
 section#user_settings label {
     display: block;
     font-weight: bold;
@@ -31,6 +41,7 @@ form#profile_change {
     display: grid;
     grid-template-columns: 30% 70%;
     grid-template-areas: 
+        "Photo Photo"
         "Pic Name_Bio"
         "Button Button";
     margin-bottom: 1.5em;
@@ -44,6 +55,7 @@ div#profile_pic {
 div#profile_info {
     grid-area: Name_Bio;
     margin-bottom: 1em;
+    margin-top: 2em;;
 }
 
 div#profile_info input[name="newName"] {
@@ -85,6 +97,19 @@ form#username_change input[type="submit"] {
     padding-left: 1em;
     padding-right: 1em;
     margin-top: 1em;
+}
+
+form#username_change input[type="submit"] {
+    display: block;
+    width: fit-content;
+    padding-left: 1em;
+    padding-right: 1em;
+    margin-top: 1em;
+}
+
+form#user_photo input[type=submit]{
+    margin-top: 0.5em;
+    display: block;
 }
 
 form#password_change {
