Changed user profile page to get user by GET

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -95,3 +95,9 @@ div#avatar_dropdown a {
 body > footer {
     text-align: center;
 }
+
+section#invalid_page_message {
+    margin: 2em;
+    text-align: center;
+    font-size: 4em;
+}
