--- a/src/style/cards.css
+++ b/src/style/cards.css
@@ -14,6 +14,11 @@ div.card {
     transition: all 0.5s;
 }
 
+div.card.submit-pet-card {
+    height: 21em;
+}
+
+
 div.card:hover {
     transform: scale(1.03);
 }
